--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,10 +1,8 @@
 sonar.projectKey=sonarqube-flask
 sonar.projectBaseDir=/sonarqube-flask
 sonar.sources=.
-sonar.host.url=http://localhost:9000
-sonar.login=c2e67720862f31e698c79b3b8c1404d1fbb09703
-sonar.python.coverage.reportPaths=/sonarqube-flask/coverage.xml
-sonar.python.xunit.reportPath=/sonarqube-flask/result.xml
+sonar.host.url=http://54.152.206.167:9000/
+sonar.login=sqp_6e9e2fd4921580676e84ef693803390ee590f46a
 sonar.coverage.dtdVerification=false
 sonar.inclusions=app.py
 sonar.coverage.exclusions=**/__init__.py
