--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -3,6 +3,8 @@ sonar.projectBaseDir=/sonarqube-flask
 sonar.sources=.
 sonar.host.url=http://54.152.206.167:9000/
 sonar.login=sqp_6e9e2fd4921580676e84ef693803390ee590f46a
+sonar.python.coverage.reportPaths=/sonarqube-flask/coverage.xml
+sonar.python.xunit.reportPath=/sonarqube-flask/result.xml
 sonar.coverage.dtdVerification=false
 sonar.inclusions=app.py
 sonar.coverage.exclusions=**/__init__.py
