--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,8 +1,8 @@
 sonar.projectKey=sonarqube-flask
 sonar.projectBaseDir=/sonarqube-flask
 sonar.sources=.
-sonar.host.url=http://54.152.206.167:9000/
-sonar.login=sqp_6e9e2fd4921580676e84ef693803390ee590f46a
+sonar.host.url=http://100.24.31.220/:9000/
+sonar.login=squ_9e8c0c7f1b8b3e57bcc7d81c22373c8595781090
 sonar.python.coverage.reportPaths=/sonarqube-flask/coverage.xml
 sonar.python.xunit.reportPath=/sonarqube-flask/result.xml
 sonar.coverage.dtdVerification=false
