--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -2,7 +2,9 @@ sonar.projectKey=sonarqube-flask
 sonar.projectBaseDir=/sonarqube-flask
 sonar.sources=.
 sonar.host.url=http://100.24.31.220/:9000/
-sonar.login=squ_9e8c0c7f1b8b3e57bcc7d81c22373c8595781090
+#sonar.login=squ_9e8c0c7f1b8b3e57bcc7d81c22373c8595781090
+sonar.login=admin
+sonar.password=admin@123
 sonar.python.coverage.reportPaths=/sonarqube-flask/coverage.xml
 sonar.python.xunit.reportPath=/sonarqube-flask/result.xml
 sonar.coverage.dtdVerification=false
