--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,10 +1,10 @@
 sonar.projectKey=sonarqube-flask
 sonar.projectBaseDir=/sonarqube-flask
 sonar.sources=.
-sonar.host.url=http://100.24.31.220/:9000/
+sonar.host.url=http://54.144.202.147:9000/
 sonar.login=admin
 sonar.password=admin@123
-sonar.token=sqp_ff4c75df1a066529c861d1f5c324e7fae4133db4
+sonar.token=sqp_001b8b973c9130e49d565fff64ff08935990870d
 sonar.python.coverage.reportPaths=/sonarqube-flask/coverage.xml
 sonar.python.xunit.reportPath=/sonarqube-flask/result.xml
 sonar.coverage.dtdVerification=false
