--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,10 +1,10 @@
 sonar.projectKey=sonarqube-flask
 sonar.projectBaseDir=/sonarqube-flask
 sonar.sources=.
-sonar.host.url=http://54.144.202.147:9000/
+sonar.host.url=http://44.202.122.3/:9000/
 sonar.login=admin
 sonar.password=admin@123
-sonar.token=sqp_001b8b973c9130e49d565fff64ff08935990870d
+sonar.token=sqa_1345ed361467d4d1adbc306938d39679a7dbc247
 sonar.python.coverage.reportPaths=/sonarqube-flask/coverage.xml
 sonar.python.xunit.reportPath=/sonarqube-flask/result.xml
 sonar.coverage.dtdVerification=false
