--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,12 +1,12 @@
 sonar.projectKey=sonarqube-flask
-sonar.projectBaseDir=/sonarqube-flask
+#sonar.projectBaseDir=/sonarqube-flask
 sonar.sources=.
-sonar.host.url=http://44.202.122.3/:9000/
-sonar.login=admin
-sonar.password=admin@123
-sonar.token=sqa_1345ed361467d4d1adbc306938d39679a7dbc247
-sonar.python.coverage.reportPaths=/sonarqube-flask/coverage.xml
-sonar.python.xunit.reportPath=/sonarqube-flask/result.xml
+sonar.host.url=http://44.202.122.3:9000/
+#sonar.login=admin
+#sonar.password=admin@123
+sonar.login=sqa_1345ed361467d4d1adbc306938d39679a7dbc247
+#sonar.python.coverage.reportPaths=/sonarqube-flask/coverage.xml
+#sonar.python.xunit.reportPath=/sonarqube-flask/result.xml
 sonar.coverage.dtdVerification=false
 sonar.inclusions=app.py
 sonar.coverage.exclusions=**/__init__.py
