--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,7 +1,7 @@
 sonar.projectKey=sonarqube-test
 #sonar.projectBaseDir=/sonarqube-test
 sonar.sources=.
-sonar.host.url=http://10.20.100.30:9000/
+sonar.host.url=http://10.20.100.30:9000
 #sonar.login=admin
 #sonar.password=admin@123
 sonar.login=sqa_ab38abc9e439135a48425624719659bf77fdbf40
